--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -5,33 +5,33 @@
             <div id="owl-intro-text" class="owl-carousel">
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="78%"/>
+                        <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="60%"/>
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="80%"/>
+                        <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>ENJOY OUR METAVERS</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button"><img src="assets/images/home/main/main_who_we_are_m.png" width="67%"/></a>
+                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_persona_universe.png" width="75%"/>
+                        <img src="assets/images/home/about/pc/main_persona_universe.png" width="60%"/>
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="80%"/>
+                        <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>PERSONA UNIVERSE</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button"><img src="assets/images/home/main/main_our_persona_m.png" width="67%"/></a>
+                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_our_persona_m.png" width="70%"/></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_with_us_together.png" width="75%"/>
+                        <img src="assets/images/home/about/pc/main_with_us_together.png" width="60%"/>
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="80%"/>
+                        <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="70%"/>
                     </h1>
                     <!-- <h1>WITH US TO INFINITY</h1> -->
-                    <a class="btn btn-blank" href="#" target="_blank" role="button"><img src="assets/images/home/main/main_what_we_do_m.png" width="67%"/></a>
+                    <a class="btn btn-blank" href="#" target="_blank" role="button" style="padding: 0px;"><img src="assets/images/home/main/main_what_we_do_m.png" width="60%"/></a>
                 </div>
             </div>
         </div>
