--- a/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
+++ b/src/app/pages/pc/home/business-renew/galaxy-business-renew.component.html
@@ -1,27 +1,41 @@
 <section id="business-section">
-    <div id="counter-up-trigger" class="counter-up text-white" data-stellar-background-ratio="0.5" style="background-image: url(assets/images/home/star.jpeg)">
+    <div id="counter-up-trigger" class="counter-up text-white" data-stellar-background-ratio="0.5" style="background-color: black;">
+        <div class="pc">
+            <div class="extra-space-xxl"></div>
+        </div>
         <div class="cover"></div>
         <!-- Begin page header-->
         <div class="page-header-wrapper">
             <div class="container">
                 <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                     <img src="assets/images/home/business/devide_business.png" />
-                    <p class="devide_sub"><img src="assets/images/home/business/devide_business_sub.png" /></p>
+                    <!-- <p class="devide_sub"><img src="assets/images/home/business/devide_business_sub.png" /></p> -->
                 </div>
             </div>
         </div>
+        <div class="extra-space-m"></div>
         <!-- End page header-->
         <div class="rotate-box-1-wrapper">
             <div class="container">
+                <div class="row col-md-12 col-sm-12">
+                    <img src="assets/images/home/business/world_content_m.png" width="100%" />
+                </div>
                 <div class="row">
                     <div class="rotate-fact-start col-md-12 col-sm-12 wow slideInLeft text-center" data-wow-delay="0.1s">
                         <div class="rotate-box-1 square-icon">
                             <div class="fact-header col-md-12 col-sm-12">
-                                <img src="assets/images/home/business/world_content_m.png" width="100%" />
                                 <!-- <h1>THE WORLD OF INFINITE CONTENTS</h1> -->
-                                <span class="subTitle">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
-                                <span class="subTitle">갤럭시 코퍼레이션은 IP, 세계관, 커머스, 메타버스 서비스로</span>
-                                <span class="subTitle">꿈을 만들고 있습니다.</span>
+                                <div class="pc">
+                                    <span class="subTitle" style="display: block;">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
+                                    <span class="subTitle" style="display: block;">갤럭시 코퍼레이션은 IP, 세계관, 커머스, 메타버스 서비스로</span>
+                                    <span class="subTitle" style="display: block;">꿈을 만들고 있습니다.</span>
+                                </div>
+                                <div class="mobile">
+                                    <span class="subTitle" style="font-size: 17px; display: block;">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시 코퍼레이션은 IP, 세계관, 커머스, </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">메타버스 서비스로 꿈을 만들고 있습니다.</span>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -34,19 +48,25 @@
                                 <div class="pc">
                                     <img src="assets/images/home/business/persona_ip.png" width="50%" height="95%" />
                                 </div>
-                                <div class="mobile">
-                                    <img src="assets/images/home/business/persona_ip.png" width="100%" />
+                                <div class="mobile text-center">
+                                    <img src="assets/images/home/business/persona_ip.png" width="80%" />
                                 </div>
                                 <!-- <h1>WE CREATE</h1>
                               <h1>METARVERS</h1> -->
                             </div>
-                            <div class="fact-inner col-md-8 col-sm-6">
+                            <div class="fact-inner-start col-md-8 col-sm-6">
                                 <div class="pc">
-                                    <span class="subTitle">멀티페르소나 시대정신을 반영하여 IP를 재정의하고</span>
-                                    <span class="subTitle">엔터테이먼트 산업을 혁신합니다.</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을 반영하여</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">오프라인의 휴먼형/ 온라인의 버츄얼휴먼/온오프라인의 </span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">캐릭터로 재정의합니다. 메타버스 시대의 이상적인 엔터테인먼트 </span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">산업으로 혁신해 나가고 있습니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px;">멀티페르소나 시대정신을 반영하여 IP를 재정의하고 엔터테이먼트 산업을 혁신합니다.</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">반영하여 오프라인의 휴먼형/ 온라인의 버츄얼휴먼/ </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">온오프라인의 캐릭터로 재정의합니다. </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">메타버스 시대의 이상적인 엔터테인먼트 </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">산업으로 혁신해 나가고 있습니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
@@ -55,26 +75,32 @@
                             </div>
                         </div>
                     </div>
-                    <div class="extra-space-xxl"></div>
-                    <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft">
+                    <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft" style="margin-top: 100px;">
                         <div class="rotate-box-1 square-icon">
                             <div class="fact-header col-md-12 col-sm-12">
                                 <div class="pc">
                                     <img src="assets/images/home/business/galaxy_universe.png" width="50%" height="95%" />
                                 </div>
-                                <div class="mobile">
-                                    <img src="assets/images/home/business/galaxy_universe.png" width="100%" />
+                                <div class="mobile text-center">
+                                    <img src="assets/images/home/business/galaxy_universe.png" width="80%" />
                                 </div>
                                 <!-- <h1>WE CREATE</h1>
                               <h1>METARVERS</h1> -->
                             </div>
-                            <div class="fact-inner col-md-8 col-sm-6">
+                            <div class="fact-inner-start col-md-8 col-sm-6">
                                 <div class="pc">
-                                    <span class="subTitle">갤럭시의 세계관 스토리로 페르소나 IP의 지속가능한</span>
-                                    <span class="subTitle">생태계를 구축하고 예능, 뮤지컬, 드라마, 영화로 확장합니다.</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">무한 확장 가능한 세계관 생태계를 구축하고 </span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">이를 통해 예능, 드라마, 뮤지컬, 영화등 끊임없이 </span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">확장할 수 있고 이를 통해 다양한</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">비즈니스를 아우를 수 있는 메타버스 세계관을 제공합니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px;">갤럭시의 세계관 스토리로 페르소나 IP의 지속가능한 생태계를 구축하고 예능, 뮤지컬, 드라마, 영화로 확장합니다.</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">갤럭시의 IP들은 멀티페르소나 시대정신을</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">무한 확장 가능한 세계관 생태계를 구축하고 </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">이를 통해 예능, 드라마, 뮤지컬, 영화등 끊임없이 </span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">확장할 수 있고 이를 통해 다양한</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">비즈니스를 아우를 수 있는 메타버스 세계관을 제공합니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
@@ -83,26 +109,28 @@
                             </div>
                         </div>
                     </div>
-                    <div class="extra-space-xxl"></div>
-                    <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft">
+                    <div class="rotate-fact-start col-md-12 col-sm-12 wow fadeInLeft" style="margin-top: 100px;">
                         <div class="rotate-box-1 square-icon">
                             <div class="fact-header col-md-12 col-sm-12">
                                 <div class="pc">
                                     <img src="assets/images/home/business/meta_platform.png" width="50%" height="95%" />
                                 </div>
-                                <div class="mobile">
-                                    <img src="assets/images/home/business/meta_platform.png" width="100%" />
+                                <div class="mobile text-center">
+                                    <img src="assets/images/home/business/meta_platform.png" width="80%" />
                                 </div>
                                 <!-- <h1>WE CREATE</h1>
                               <h1>METARVERS</h1> -->
                             </div>
-                            <div class="fact-inner col-md-8 col-sm-6">
+                            <div class="fact-inner-start col-md-8 col-sm-6">
                                 <div class="pc">
-                                    <span class="subTitle">또 다른 내가 어딘가 존재한다고 상상해본 적 있나요?</span>
-                                    <span class="subTitle">페르소나들이 존재하는 그 곳, 페르소나 플래닛입니다.</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">우리 모두가 또 다른 나를 만들어 꿈과 희망을 펼칠 수 있는</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">페르소나 플랫폼, 그 곳에서 우리는 새로운 시대를 맞이하고,</span>
+                                    <span class="subTitle" style="font-size: 23px; display: block;">그 속에서 메타버스 라이프를 만들어 갑니다.</span>
                                 </div>
                                 <div class="mobile">
-                                    <span class="subTitle" style="font-size: 17px;">또 다른 내가 어딘가 존재한다고 상상해본 적 있나요? 페르소나들이 존재하는 그 곳, 페르소나 플래닛입니다.</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">우리 모두가 또 다른 나를 만들어 꿈과 희망을 펼칠 수 있는</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">페르소나 플랫폼, 그 곳에서 우리는 새로운 시대를 맞이하고,</span>
+                                    <span class="subTitle" style="font-size: 17px; display: block;">그 속에서 메타버스 라이프를 만들어 갑니다.</span>
                                     <div class="extra-space-xl"></div>
                                 </div>
                             </div>
