--- a/src/app/pages/pc/home/galaxy-home.component.html
+++ b/src/app/pages/pc/home/galaxy-home.component.html
@@ -11,7 +11,7 @@
 <app-galaxy-business-renew></app-galaxy-business-renew>
 <!-- End business section -->
 <!-- Begin careers section -->
-<app-galaxy-careers></app-galaxy-careers>
+<!-- <app-galaxy-careers></app-galaxy-careers> -->
 <!-- End careers section -->
 <!-- Begin social section -->
 <app-galaxy-social></app-galaxy-social>
