--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -12,11 +12,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="pc">
+                        <div class="extra-space-xxl"></div>
+                    </div>
                     <!-- End page header-->
                     <div class="portfolio_content_area">
                         <div class="portfolio_content">
                             <div class="row" id="portfolio">
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z1_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -32,7 +35,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z2_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -48,7 +51,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z3_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -64,7 +67,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z4_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -80,7 +83,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z5_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -96,7 +99,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z6_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -112,7 +115,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z7_detail.png" data-lightbox="portfolio" class="link-preview">
@@ -128,7 +131,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.7s">
+                                <div class="ip col-xs-4 col-sm-4 wow fadeInUp" data-wow-delay="0.7s">
                                     <div class="pc">
                                         <div class="portfolio_single_content">
                                             <a href="assets/images/home/portfolio/z8_detail.png" data-lightbox="portfolio" class="link-preview">
