--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -2,13 +2,13 @@
     <!-- Begin page header-->
     <div class="page-header-wrapper">
         <div class="container">
+            <div class="extra-space-l"></div>
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.1s">
                 <img src="assets/images/home/social/devide_join_us.png" />
             </div>
-            <div class="extra-space-m"></div>
-            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.2s">
+            <!-- <div class="page-header text-center wow fadeInUp" data-wow-delay="0.2s">
                 <img src="assets/images/home/social/news_letter.png" />
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="extra-space-l"></div>
@@ -18,14 +18,14 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 wow slideInLeft fact text-center">
                     <div class="pc">
-                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
-                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
-                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                        <span class="subTitle" style="display: block;">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle" style="display: block;">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle" style="display: block;">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
                     </div>
                     <div class="mobile">
-                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
-                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
-                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                        <span class="subTitle" style="display: block;">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle" style="display: block;">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle" style="display: block;">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
                     </div>
                 </div>
             </div>
@@ -43,6 +43,7 @@
                     </div>
                 </div>
             </div>
+            <div class="extra-space-l"></div>
         </div>
     </div>
 </section>
