--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -15,22 +15,16 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="col-sm-6 col-md-8">
+                        <div class="contact-info">
+                            <h5>우리의 메타버스를 함께 </h5>
+                            <h5>여행할갤럭시 DNA를 </h5>
+                            <h5>가진 분들과 함께합니다.</h5>
+                        </div>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <div class="contact-form" #contactForm>
                             <app-connection [contactFormElement]="contactFormElement"></app-connection>
                         </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-12">
-                    <div class="col-sm-6 col-md-8">
-                        <div class="contact-info">
-                            <h5>GALAXY DNA는 </h5>
-                            <h5>우리가 일하는 방식과 </h5>
-                            <h5>방식과 가치 판단의 기준을 의미합니다.</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
                     </div>
                 </div>
             </div>
@@ -39,44 +33,43 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="dna-fact-start col-sm-4 col-md-4">
                         <div class="dna-info">
-                            <h5>PASSION</h5>
-                            <div class="pc">
-                                <p class="mainTitle">우리가 원하는 인재의 모습</p>
-                                <p class="subTitle"> 자신의 일을 진심으로 좋아하는 사람은 타협하지 않는 스스로의 ‘높은 기준’으로 최고의 결과를 만들기 위해 몰입하며, 근본적인 해결책을 찾기 위해 고민하고 ‘끊임 없는 개선’을 시도합니다. 또한 사소한 문제나 궁금증도 냥 넘기지않고, 긍정적 시각으로 더 나은 결과와 환경을 만들기 위해 끝까지 노력합니다. </p>
+                            <h5 style="margin-bottom: 0px;">PIONEER</h5>
+                            <h5>SPIRIT</h5>
+                            <div class="extra-space-m"></div>
+                            <div class="pc" style="margin-right: 50px;">
+                                <p class="subTitle"> 우리는 모험심이 강한 집단입니다. 새로운 것을 탐험하고 남들과 다른 사고와 도전정신으로 누구보다 빨리 새로운 세상을 맞이할 사람들. 우리는 그런 분들과 새로운 세상을 만들어 갑니다.</p>
                             </div>
                             <div class="mobile">
-                                <p class="mainTitle">우리가 원하는 인재의 모습</p>
-                                <p class="subTitle"> 자신의 일을 진심으로 좋아하는 사람은 타협하지 않는 스스로의 ‘높은 기준’으로 최고의 결과를 만들기 위해 몰입하며, 근본적인 해결책을 찾기 위해 고민하고 ‘끊임 없는 개선’을 시도합니다. 또한 사소한 문제나 궁금증도 냥 넘기지않고, 긍정적 시각으로 더 나은 결과와 환경을 만들기 위해 끝까지 노력합니다. </p>
+                                <p class="subTitle"> 우리는 모험심이 강한 집단입니다. 새로운 것을 탐험하고 남들과 다른 사고와 도전정신으로 누구보다 빨리 새로운 세상을 맞이할 사람들. 우리는 그런 분들과 새로운 세상을 만들어 갑니다. </p>
                             </div>
                         </div>
                     </div>
                     <div class="dna-fact-start col-sm-4 col-md-4">
                         <div class="dna-info">
-                            <h5>FREEDOM</h5>
-                            <div class="pc">
-                                <p class="mainTitle">우리가 일하는 방식</p>
-                                <p class="subTitle"> 다양한 경험과 생각을 제약 없이 소통할 수 있는 ‘수평적 커뮤니케이션’을 지향합니다. 정보와 의견을 적극적으로 공유하고, 필요한 피드백을 서로 주고 받으며 더 좋은 결과를 만듭니다. 또한 본인이 원하는 바를 마음껏 펼칠 수 있도록 ‘충분한 권한과 책임’을 부여 받아 업무 영역을 적극적으로 확장할 수 있습니다. </p>
+                            <h5>VALUABLE INFLUENCE</h5>
+                            <div class="extra-space-m"></div>
+                            <div class="pc" style="margin-right: 50px;">
+                                <p class="subTitle"> 삶을 가치 있게 만드는 것에 최선을 다합니다. 우리는 가치 있는 콘텐츠와 가치 있는 모든 일에 수평적인 자세로 공동체를 위한 콘텐츠 및 IP를 개발하여, 보다 좋은 세상을 만들어 가는 것에 기초합니다. </p>
                             </div>
                             <div class="mobile">
-                                <p class="mainTitle">우리가 일하는 방식</p>
-                                <p class="subTitle"> 다양한 경험과 생각을 제약 없이 소통할 수 있는 ‘수평적 커뮤니케이션’을 지향합니다. 정보와 의견을 적극적으로 공유하고, 필요한 피드백을 서로 주고 받으며 더 좋은 결과를 만듭니다. 또한 본인이 원하는 바를 마음껏 펼칠 수 있도록 ‘충분한 권한과 책임’을 부여 받아 업무 영역을 적극적으로 확장할 수 있습니다. </p>
+                                <p class="subTitle"> 삶을 가치 있게 만드는 것에 최선을 다합니다. 우리는 가치 있는 콘텐츠와 가치 있는 모든 일에 수평적인 자세로 공동체를 위한 콘텐츠 및 IP를 개발하여, 보다 좋은 세상을 만들어 가는 것에 기초합니다. </p>
                             </div>
                         </div>
                     </div>
                     <div class="dna-fact-start col-sm-4 col-md-4">
                         <div class="dna-info">
-                            <h5>TRUST</h5>
-                            <div class="pc">
-                                <p class="mainTitle">우리가 서로를 바라보는 태도</p>
-                                <p class="subTitle"> 우리는 함께 성공한다는 믿음, 즉 ‘Win Together 마인드’로 일합니다. 회사의 미션과 비전을 진정으로 이해하고 공감하며, 공동 목표 달성을 위해 ‘조건 없이 협력’합니다. 협업 과정에서 필연적으로 발생하는 건강한 갈등을 장려하고, 용감하고 과감한 논의로 생산적인 결론을 이끌어 냅니다. </p>
+                            <h5>WONDERFUL WORLD</h5>
+                            <div class="extra-space-m"></div>
+                            <div class="pc" style="margin-right: 50px;">
+                                <p class="subTitle"> 우리는 함께 만들고, 함께 느낄수 있는 보람과 성취, 이를 함께 나눈다는 생각으로 업무를 수행합니다. 이를 통해 만들어낸 모든 것들이 보다 멋진 세상을 만들어가는 데에 이바지한다는 것을 믿습니다.</p>
                             </div>
                             <div class="mobile">
-                                <p class="mainTitle">우리가 서로를 바라보는 태도</p>
-                                <p class="subTitle"> 우리는 함께 성공한다는 믿음, 즉 ‘Win Together 마인드’로 일합니다. 회사의 미션과 비전을 진정으로 이해하고 공감하며, 공동 목표 달성을 위해 ‘조건 없이 협력’합니다. 협업 과정에서 필연적으로 발생하는 건강한 갈등을 장려하고, 용감하고 과감한 논의로 생산적인 결론을 이끌어 냅니다. </p>
+                                <p class="subTitle"> 우리는 함께 만들고, 함께 느낄수 있는 보람과 성취, 이를 함께 나눈다는 생각으로 업무를 수행합니다. 이를 통해 만들어낸 모든 것들이 보다 멋진 세상을 만들어가는 데에 이바지한다는 것을 믿습니다.</p>
                             </div>
                         </div>
                     </div>
                     <div class="dna-fact-start col-sm-12 col-md-12 ">
+                        <div class="extra-space-l"></div>
                         <div class="dna-info text-right">
                             <div class="pc">
                                 <p class="mainTitle">커리어 성장을 위한 다양한 기회를 지금 확인해 보십시오. <a href="#"><img src="assets/images/home/business/home.png" width="75px" /></a></p>
@@ -86,9 +79,11 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
         <!-- /.container -->
+        <div class="extra-space-xxl"></div>
     </div>
 </section>
