--- a/src/app/pages/pc/home/contact/galaxy-contact.component.html
+++ b/src/app/pages/pc/home/contact/galaxy-contact.component.html
@@ -1,4 +1,5 @@
 <section id="contact-section" class="page text-white parallax" data-stellar-background-ratio="0.5" style="background-image: url(assets/images/home/contact/map.png);">
+    <div class="extra-space-xxl"></div>
     <div class="cover"></div>
     <!-- Begin page header-->
     <div class="page-header-wrapper">
@@ -7,9 +8,6 @@
                 <img src="assets/images/home/contact/devide_contact.png" />
             </div>
             <div class="extra-space-m"></div>
-            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
-                <p class="devide_sub"><img src="assets/images/home/contact/devide_contact_sub.png" /></p>
-            </div>
         </div>
     </div>
     <!-- End page header-->
@@ -28,7 +26,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-sm-12" style="margin-top: 50px;">
                     <div class="col-sm-4">
                     </div>
                     <div class="contact-form col-sm-4">
@@ -45,7 +43,7 @@
                             <div class="form-group">
                                 <textarea class="form-control input-lg" rows="5" placeholder="내용" required></textarea>
                             </div>
-                            <button type="submit" class="btn wow bounceInRight" data-wow-delay="0.8s">Send</button>
+                            <button type="submit" class="btn wow bounceInRight">Send</button>
                         </form>
                     </div>
                     <div class="col-sm-4">
