--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -4,11 +4,15 @@
         <div class="container">
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                 <img src="assets/images/home/company/devide_company.png" />
-                <p class="devide_sub"><img src="assets/images/home/company/devide_company_sub.png" /></p>
+                <!-- <p class="devide_sub"><img src="assets/images/home/company/devide_company_sub.png" /></p> -->
             </div>
         </div>
     </div>
     <!-- End page header-->
+    <div class="pc">
+        <div class="extra-space-xxl"></div>
+    </div>
+    
     <!-- Begin rotate box-1 -->
     <div class="rotate-box-1-wrapper">
         <div class="container">
@@ -17,22 +21,24 @@
                     <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
                             <div class="pc">
-                                <img src="assets/images/home/intro/first.png" width="50%" height="95%" />
+                                <img src="assets/images/home/intro/fisrt.png" width="50%" height="95%" />
                             </div>
-                            <div class="mobile">
-                                <img src="assets/images/home/intro/first_m.png" width="100%" />
+                            <div class="mobile text-center">
+                                <img src="assets/images/home/intro/first_m.png" width="80%" />
                             </div>
-                            <!-- <h1>WE CREATE</h1>
-                          <h1>METARVERS</h1> -->
                         </div>
-                        <div class="fact-inner col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
-                                <span class="subTitle">즐겁게 누구나 꿈을 이룰 수 있는</span>
-                                <span class="subTitle">새로운 세계를 만들어 나갑니다.</span>
+                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
+                                <span class="subTitle" style="display: block;">누구나가 즐겁게 꿈을 이룰 수 있는</span>
+                                <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
+                                <span class="subTitle" style="display: block;">새로운 세상 새로운 라이프를 만들어 갑니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코퍼레이션은 즐겁게 누구나 꿈을 이룰 수 있는 새로운 세계를 만들어 나갑니다.</span>
+                                <span class="subTitle" style="display: block;">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은</span>
+                                <span class="subTitle" style="display: block;">누구나가 즐겁게 꿈을 이룰 수 있는</span>
+                                <span class="subTitle" style="display: block;">갤럭시만의 메타버스 세계를 만들어 </span>
+                                <span class="subTitle" style="display: block;">새로운 세상 새로운 라이프를 만들어 갑니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion4>
@@ -44,22 +50,30 @@
                     <div class="rotate-box-1 square-icon ">
                         <div class="fact-header col-md-12 col-sm-12">
                             <div class="pc">
-                                <img src="assets/images/home/intro/second.png" width="50%" height="95%" />
+                                <img src="assets/images/home/intro/second.png" width="50%" height="90%" />
                             </div>
-                            <div class="mobile">
-                                <img src="assets/images/home/intro/second_m.png" width="100%" />
+                            <div class="mobile text-center">
+                                <img src="assets/images/home/intro/second_m.png" width="80%" />
                             </div>
                             <!-- <h1>NEW WORLD</h1>
                           <h1>CONNECTION</h1> -->
                         </div>
-                        <div class="fact-inner col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">우리가 만든 페르소나 별은 무한한 콘텐츠 세상을 연결하고</span>
-                                <span class="subTitle">갤럭시 IP들은 다양한 비즈니스로 발전하는</span>
-                                <span class="subTitle">메타버스 초연결 통합 허브입니다.</span>
+                                <span class="subTitle" style="display: block;">우리가 만든 메타버스의 세계, </span>
+                                <span class="subTitle" style="display: block;">‘페르소나 별’은 무한한 콘텐츠 세상을 연결합니다.</span>
+                                <span class="subTitle" style="display: block;">그속에서 활동하는 갤럭시 IP들은 다양한 </span>
+                                <span class="subTitle" style="display: block;">비즈니스로 발전하여 유저들과 새로운 세상을 </span>
+                                <span class="subTitle" style="display: block;">함께 만들어가 가는 메타버스 초연결 통합 허브를 </span>
+                                <span class="subTitle" style="display: block;">만들어 갑니다. </span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">우리가 만든 페르소나 별은 무한한 콘텐츠 세상을 연결하고 갤럭시 IP들은 다양한 비즈니스로 발전하는 메타버스 초연결 통합 허브입니다.</span>
+                                <span class="subTitle" style="display: block;">우리가 만든 메타버스의 세계, ‘페르소나 별’은</span>
+                                <span class="subTitle" style="display: block;">무한한 콘텐츠 세상을 연결합니다.</span>
+                                <span class="subTitle" style="display: block;">그속에서 활동하는 갤럭시 IP들은 다양한 </span>
+                                <span class="subTitle" style="display: block;">비즈니스로 발전하여 유저들과 새로운 세상을 </span>
+                                <span class="subTitle" style="display: block;">함께 만들어가 가는 메타버스 초연결 통합 허브를 </span>
+                                <span class="subTitle" style="display: block;">만들어 갑니다. </span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion3>
@@ -71,21 +85,26 @@
                     <div class="rotate-box-1 square-icon ">
                         <div class="fact-header col-md-12 col-sm-12">
                             <div class="pc">
-                                <img src="assets/images/home/intro/third.png" width="50%" height="95%" />
+                                <img src="assets/images/home/intro/third.png" width="40%" height="60%" />
                             </div>
-                            <div class="mobile">
-                                <img src="assets/images/home/intro/third_m.png" width="100%" />
+                            <div class="mobile text-center">
+                                <img src="assets/images/home/intro/third_m.png" width="80%" />
                             </div>
                             <!-- <h1>INSPIRE</h1>
                           <h1>PERSONA</h1> -->
                         </div>
-                        <div class="fact-inner col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">우리는 갤럭시 유니버스를 통해 다양한 IP를 유기적으로</span>
-                                <span class="subTitle">연결하여 지속 가능한 페르소나 생태계를 구축합니다.</span>
+                                <span class="subTitle" style="display: block;">우리는 갤럭시 유니버스를 통해 온,오프라인의</span>
+                                <span class="subTitle" style="display: block;">다양한 IP를 유기적으로 연결하여 가장 이상적인</span>
+                                <span class="subTitle" style="display: block;">메타버스산업을 이끌며, 지속 가능한 페르소나IP </span>
+                                <span class="subTitle" style="display: block;">생태계를 구축합니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">우리는 갤럭시 유니버스를 통해 다양한 IP를 유기적으로 연결하여 지속 가능한 페르소나 생태계를 구축합니다.</span>
+                                <span class="subTitle" style="display: block;">우리는 갤럭시 유니버스를 통해 온,오프라인의</span>
+                                <span class="subTitle" style="display: block;">다양한 IP를 유기적으로 연결하여 가장 이상적인</span>
+                                <span class="subTitle" style="display: block;">메타버스산업을 이끌며, 지속 가능한 페르소나IP </span>
+                                <span class="subTitle" style="display: block;">생태계를 구축합니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion2>
@@ -97,21 +116,26 @@
                     <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
                             <div class="pc">
-                                <img src="assets/images/home/intro/fourth.png" width="50%" height="95%" />
+                                <img src="assets/images/home/intro/fourth.png" width="45%" height="70%" />
                             </div>
-                            <div class="mobile">
-                                <img src="assets/images/home/intro/fourth_m.png" width="100%" />
+                            <div class="mobile text-center">
+                                <img src="assets/images/home/intro/fourth_m.png" width="80%" />
                             </div>
                             <!-- <h1>CULTURE</h1>
                           <h1>CREATION</h1> -->
                         </div>
-                        <div class="fact-inner col-md-8 col-sm-6">
+                        <div class="fact-inner-start col-md-8 col-sm-6">
                             <div class="pc">
-                                <span class="subTitle">우리가 만든 메타버스 세상 속의 갤럭시 IP는</span>
-                                <span class="subTitle">이전에 경험하지 못한 새로운 세상을 만들어 하나의 문화를 개척합니다.</span>
+                                <span class="subTitle" style="display: block;">우리가 만든 메타버스 세상 속, 갤럭시 IP는</span>
+                                <span class="subTitle" style="display: block;">이전에 경험하지 못한 새로운 세상을 만들어가고</span>
+                                <span class="subTitle" style="display: block;">나아가 부캐 페르소나 라는 메타버스속 새로운 </span>
+                                <span class="subTitle" style="display: block;">문화를 개척합니다.</span>
                             </div>
                             <div class="mobile">
-                                <span class="subTitle">우리가 만든 메타버스 세상 속의 갤럭시 IP는 이전에 경험하지 못한 새로운 세상을 만들어 하나의 문화를 개척합니다.</span>
+                                <span class="subTitle" style="display: block;">우리가 만든 메타버스 세상 속, 갤럭시 IP는</span>
+                                <span class="subTitle" style="display: block;">이전에 경험하지 못한 새로운 세상을 만들어가고</span>
+                                <span class="subTitle" style="display: block;">나아가 부캐 페르소나 라는 메타버스속 새로운 </span>
+                                <span class="subTitle" style="display: block;">문화를 개척합니다.</span>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6" #motion1>
